# sgx-attester

./: Cargo.toml  Makefile  README.md  example.yaml
.github/workflows/: ci.yml
src/: data.rs  main.rs
