[package]
name = "sgx-attester"
version = "0.1.0"
authors = ["Gianluca Scopelliti <gianluca.scopelliti@ericsson.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.131"
serde_yaml = "0.8.23"
sgx_attestation = { git = "https://github.com/AuthenticExecution/rust-sgx-libs.git", features = ["sp"] }
